--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "cakephp/debug_kit": "^4.1",
         "josegonzalez/dotenv": "^3.2",
         "phpunit/phpunit": "~8.5.0",
-        "psy/psysh": "@stable"
+        "psy/psysh": "@stable",
+        "heroku/heroku-buildpack-php":"*"
     },
     "suggest": {
         "markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",
